--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
   "require": {
     "symfony/dotenv": "^6.2",
     "twig/twig": "^3.6",
-    "psr/container": "^2.0"
+    "psr/container": "^2.0",
+    "psr/http-message": "^1.0"
+    
   }
 }
